# colin

./: CMakeLists.txt  LICENSE.txt  gen_vs2015_64.bat
CheckMats/: CMakeLists.txt  check_mats.cpp  check_mats.h  conf.ini  err.h  types.h
client/: CMakeLists.txt  main.cpp
mats/: gen_cpp.bat  mats.pb.cc  mats.pb.h  mats.proto  packedmsg.h
protobuf/lib/: libprotobuf-lite.lib
server/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  mats.cpp  mats.h  server - 副本.cpp  server - 副本.h  server.cpp  server.h
